2009-02-02  Carl-Anton Ingmarsson  <ca.ingmarsson@gmail.com>

	* plugins/file-manager/file-manager.glade:
	* plugins/file-manager/file-model.c
	(file_model_vcs_status_callback), (file_model_set_property),
	(file_model_get_property), (file_model_class_init):
	* plugins/file-manager/plugin.c (on_gconf_notify),
	(file_manager_activate):
	#570136 – add option to not show unversioned files

2009-02-02   Pavel Kostyuchenko  <ShprotX@gmail.com>

	* manuals/anjuta-manual/C/anjuta-manual.xml:
	* manuals/anjuta-manual/Makefile.am:
	* plugins/glade/plugin.c (set_default_resource_target),
	(on_default_resource_target_changed), (ipreferences_unmerge):
	Glade manual and misc fixes:
	542412 – GSoc: Glade3 integration

2009-02-02  Johannes Schmid  <jhs@gnome.org>

	* plugins/debug-manager/sharedlib.c (destroy_sharedlibs_gui):
	* plugins/debug-manager/signals.c (destroy_signals_gui):
	* plugins/document-manager/anjuta-docman.c
	(anjuta_docman_remove_document):
	Don't destroy widgets where you don't own a reference (fixes some gtk-criticals)

2009-02-01  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/message-view/plugin.c,
	plugins/message-view/message-view.c,
	plugins/message-view/message-view.h,
	plugins/message-view/anjuta-message-manager.ui:
	Fix #567728 – Copypasting build errors, messages and warnings

2009-02-01  Johannes Schmid  <jhs@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin
	.glade:
	* plugins/cvs-plugin/anjuta-cvs-plugin.glade:
	* plugins/document-manager/anjuta-document-manager.glade:
	* plugins/language-support-cpp-java/anjuta-language-cpp-java.glade:
	* plugins/message-view/anjuta-message-manager-plugin.glade:
	* plugins/scintilla/anjuta-editor-scintilla.glade:
	* plugins/search/anjuta-search.glade:
	* plugins/sourceview/anjuta-editor-sourceview.glade:
	
	Avoid GtkSpinButton adjustment warnings
	
	* plugins/subversion/subversion-ui-utils.c (check_input),
	(on_status_command_data_arrived):