@@ -1,3 +1,13 @@
+2009-02-02  Jens Georg  <mail@jensge.org>
+
+	* plugins/gbf-am/gbf-am-project.c (uri_is_parent), (uri_normalize),
+	(uri_get_chrooted_path):
+	* plugins/gbf-mkfile/gbf-mkfile-project.c (uri_is_parent),
+	(uri_get_chrooted_path):
+	
+	#511589 - fix c&p error in uri_is_parent; fix uri_get_chrooted_path to 
+	return paths starting with "/"
+
 2009-02-02  Carl-Anton Ingmarsson  <ca.ingmarsson@gmail.com>
 
 	* plugins/file-manager/file-manager.glade:
